feat:- added a department section

--- a/top_header/top_header.html
+++ b/top_header/top_header.html
@@ -76,6 +76,50 @@
                         </div>
              </form>
         </div>
+
+      <div class="departments-section">
+
+                        <div class="departments-title-section">
+
+                                    <div class="departments-title">
+                                                <p>Our <br> Departments</p>
+                                    </div>
+
+                                    <div class="departments-arrow">
+                                                <img src="arrow.png" alt="">
+                                    </div>
+                        </div>
+
+                        <div class="departments-card-container">
+
+                                    <div class="departments-card">
+                                                <img src="department_card1.png" alt="">
+                                                <p class="departments_card_title">Hepatobiliary Surgery</p>
+                                                <p>The Hepatobiliary and Transplantology Unit of GG Hospital offers a comprehensive...</p>
+                                                <a href="">Read more</a>
+                                     </div>
+
+                                    <div class="departments-card">
+                                                <img src="department_card2.png" alt="">
+                                                <p class="departments_card_title">Medical Oncology</p>
+                                                <p>GG Hospital is the best affordable hospital in South Kerala which is NABH accredited hospital...</p>
+                                                <a href="">Read more</a>
+                                    </div>
+
+
+                                    <div class="departments-card">
+                                                <img src="department_card3.png" alt="">
+                                                <p class="departments_card_title">ENT, Head & Neck Skull Surgery</p>
+                                                <p>The ENT Department in GG Hospital provides a wide range of treatment modalities including...</p>
+                                                <a href="">Read more</a>
+                                    </div>
+
+                                    </div>
+
+                              </div>
+
+
+
     </div>
   </body>
 </html>
