feat:- added Why GG hospital section

--- a/top_header/top_header.html
+++ b/top_header/top_header.html
@@ -93,14 +93,14 @@
                         <div class="departments-card-container">
 
                                     <div class="departments-card">
-                                                <img src="department_card1.png" alt="">
+                                                <img src="department_card1.png" alt="image">
                                                 <p class="departments_card_title">Hepatobiliary Surgery</p>
                                                 <p>The Hepatobiliary and Transplantology Unit of GG Hospital offers a comprehensive...</p>
                                                 <a href="">Read more</a>
                                      </div>
 
                                     <div class="departments-card">
-                                                <img src="department_card2.png" alt="">
+                                                <img src="department_card2.png" alt="image">
                                                 <p class="departments_card_title">Medical Oncology</p>
                                                 <p>GG Hospital is the best affordable hospital in South Kerala which is NABH accredited hospital...</p>
                                                 <a href="">Read more</a>
@@ -108,7 +108,7 @@
 
 
                                     <div class="departments-card">
-                                                <img src="department_card3.png" alt="">
+                                                <img src="department_card3.png" alt="image">
                                                 <p class="departments_card_title">ENT, Head & Neck Skull Surgery</p>
                                                 <p>The ENT Department in GG Hospital provides a wide range of treatment modalities including...</p>
                                                 <a href="">Read more</a>
@@ -116,9 +116,30 @@
 
                                     </div>
 
-                              </div>
+      </div>
+
+      <div class="why-gg">
+           
+             <div class="why-gg-image_container">
+                  <img src="why-gg design.png"  class="design-image" alt="Doctors">
+                  <img src="doctors&nurse.png" class="image2"alt="Doctors">
+             </div>
+            <div class="why-gg-content">
+                  <p class="why-gg-title">Why GG Hospital</p>
+                  <ul>
+                        <li>Multi-super specialty hospital in South Kerala.</li>
+                        <li>Achieved the unique reputation</li>
+                        <li>Multi-super specialty hospital in South Kerala.</li>
+                        <li>Multi-super specialty hospital in South Kerala.</li>
+                        <li>Multi-super specialty hospital in South Kerala.</li>
+                  </ul>
+            </div>
 
 
+
+      </div>
+
+            
 
     </div>
   </body>
